<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">MyNote</string>
    <string name="action_settings">Settings</string>
    
    <!-- TextView -->
    <string name="monthyear">January 2014</string>
    <string name="currDate">26/01/2014</string>
    <string name="home">Home:</string>
    <string name="work">Work:</string>
    
    <!-- Buttons -->
	<string name="cancel">Cancel</string>
    <string name="clone">Clone</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="ch">Click Here</string>
    
    <!-- Image Description  -->
    <string name="p_btn_des">month prevoius btn</string>
    <string name="n_btn_des">month next btn</string>
    <string name="l_btn_des">list open btn</string>
    
</resources>