<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false" >

    <!-- Top Bar -->
    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:background="#528413">

        <TextView
            android:id="@+id/month_year"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#ffffff"
            android:text="@string/monthyear"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>

    <!-- Left Pane -->
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="120dp"
        android:layout_height="370dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:background="#D84E13" 
        android:baselineAligned="false" >
        
        <ListView
	        android:id="@+id/listview"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:divider="#cdc9c9"
        	android:dividerHeight="2sp"
        	android:cacheColorHint="#fff"
        	android:choiceMode="singleChoice" />
    </RelativeLayout>

    <!-- Right Pane -->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="370dp"
        android:layout_alignTop="@+id/relativeLayout1"
        android:layout_toRightOf="@+id/relativeLayout1"
        android:background="#919581"
        android:baselineAligned="false" >

        <TextView
            android:id="@+id/currentDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/currDate"
            android:gravity="center"
			android:background="#2088B2"
			android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/home_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/currentDate"
            android:layout_marginTop="5dp"
            android:text="@string/home"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editHome"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/home_Title"
            android:inputType="textMultiLine" 
            android:gravity="top">
        </EditText>

        <TextView
            android:id="@+id/work_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editHome"
            android:text="@string/work"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editWork"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/work_Title"
            android:inputType="textMultiLine" 
            android:gravity="top"/>

    </RelativeLayout>

    <!-- Bottom Bar -->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#528413"
        android:baselineAligned="false" >

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            style="@style/btnStyleArsenic"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/cancel" 
            android:onClick="onCancelBtnClicked"/>

        <Button
            android:id="@+id/clone_btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            style="@style/btnStyleArsenic"
            android:layout_alignBaseline="@+id/cancel_btn"
            android:layout_alignBottom="@+id/cancel_btn"
            android:layout_toRightOf="@+id/cancel_btn"
            android:text="@string/clone" 
            android:onClick="onCloneBtnClicked"/>

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            style="@style/btnStyleArsenic"
            android:layout_alignBaseline="@+id/clone_btn"
            android:layout_alignBottom="@+id/clone_btn"
            android:layout_toRightOf="@+id/clone_btn"
            android:text="@string/delete" 
            android:onClick="onDeleteBtnClicked"/>

        <Button
            android:id="@+id/save_btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            style="@style/btnStyleArsenic"
            android:layout_alignBaseline="@+id/delete_btn"
            android:layout_alignBottom="@+id/delete_btn"
            android:layout_toRightOf="@+id/delete_btn"
            android:text="@string/save" 
            android:onClick="onSaveBtnClicked"/>

    </RelativeLayout>

</RelativeLayout>